<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        style="@style/TextAppearance.AppCompat.Display1"
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sat_scores"
        android:textStyle="bold"
        android:textColor="@android:color/holo_orange_dark"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>

    <TextView
        style="@style/TextAppearance.AppCompat.Large"
        android:id="@+id/noOfTestTakers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        tools:text="@string/number_of_test_takers"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">
    </TextView>

    <TextView
        style="@style/TextAppearance.AppCompat.Title"
        android:id="@+id/mathScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        tools:text="@string/math_scores"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noOfTestTakers">
    </TextView>

    <TextView
        style="@style/TextAppearance.AppCompat.Title"
        android:id="@+id/readingScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        tools:text="@string/reading_scores"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mathScore">
    </TextView>

    <TextView
        style="@style/TextAppearance.AppCompat.Title"
        android:id="@+id/writingScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        tools:text="@string/writing_scores"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/readingScore">
    </TextView>


</androidx.constraintlayout.widget.ConstraintLayout>